Attempt to fix logobox width issue on mobile

--- a/css/home/mobile.css
+++ b/css/home/mobile.css
@@ -14,6 +14,7 @@
 #diamond {
   margin-top: 11vh;
   font-size: 14vh;
+  width: 100vw;
 }
 
 @media (max-width: 700px) {
@@ -21,6 +22,10 @@
     margin-top: 11vh;
     font-size: 10vh;
   }
+}
+
+.logo-box {
+    width: 100vw;
 }
 
 .logo-box a {
